# AIQuantification

./: .gitignore  AGENTS.md  AGENT_CONSTITUTION.md  DATA_SOURCE_COMPLETE.md  DATA_SOURCE_FIXED.md  FINAL_VERIFICATION.md  ITERATION_PLAN.md  PHASE3_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_FINAL.md  README.md  README_FINAL.md  README_SERVICES.md  TEST_RESULTS_FINAL.md  TOOL_EXECUTION_COMPLETE.md  TOOL_EXECUTION_REPORT.md  TOOL_EXECUTION_SUMMARY.md  TOOL_TASK_COMPLETE.md  config.yaml.example  main.py  pyproject.toml  stop_services.bat  test_frontend.bat  test_frontend.sh  test_tools_execution.py  tool_execution_full_report.json  tool_execution_report.json  verify_tools.py
.claude/: DEVELOPMENT_ROADMAP.md  READY_TO_START.md  TODAY_SUMMARY.md  multi_agent_system.md  plan.md
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
agent/: config.py  core.py  llm_client.py  memory.py
api/: multi_agent_routes.py  routes.py
docs/: DATA_FIX_VERIFICATION.md  DATA_SOURCE_FIX_REPORT.md  DATA_SOURCE_GUIDE.md  FRONTEND_TEST_READY.md  PHASE3_FINAL_SUMMARY.md  PHASE3_FRONTEND_COMPLETE.md  PHASE3_SUMMARY.md  PHASE3_TEST_PLAN.md  README.md  TESTING_GUIDE.md  TEST_REPORT.md  agent-design.md  api-design.md  architecture.md  development-constitution.md  tutorial-analysis.md  tutorial-backtest.md  tutorial-quickstart.md
models/: schemas.py
scripts/: quick_audit.py  test_all_tools.py  test_audit.py
tests/: test_alpha.py  test_api.py  test_backtest.py  test_base_agent.py  test_broker.py  test_core.py  (+23 more)
(+104 files in other folders)
