[project]
name = "aiquantification"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "httpx>=0.27.0",
    "akshare>=1.0.0",
    "pyyaml>=6.0.0",
    "ccxt>=4.0.0",
    "pycoingecko>=3.0.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
